--- a/index.html
+++ b/index.html
@@ -174,85 +174,83 @@
             transform: translateY(-4px); /* More pronounced lift on hover */
         }
 
-        /* Print-specific adjustments for a single page */
+        /* Print-specific adjustments for a natural flow across two pages */
         @media print {
             html, body {
-                height: 100%; /* Set height for single page */
+                height: auto; /* Allow content to dictate height */
                 margin: 0;
                 padding: 0;
-                overflow: hidden; /* Prevent scrolling */
+                overflow: visible; /* Ensure all content is visible */
             }
             .container {
-                box-shadow: none;
-                border: none;
-                padding: 10mm; /* Reduced padding for print */
-                max-width: 100%;
-                height: 100%; /* Use full height for print */
-                display: flex; /* Use flex to distribute content vertically */
-                flex-direction: column;
-                justify-content: space-between; /* Distribute content evenly */
+                box-shadow: none; /* Remove shadows for print */
+                border: none; /* Remove borders for print */
+                padding: 15mm; /* Consistent margins for print */
+                max-width: 100%; /* Use full available width */
+                width: 100%;
+                display: block; /* Allow natural flow */
             }
             h1.main-title {
-                font-size: 1.8rem; /* Significantly smaller for single page */
-                margin-bottom: 8mm; /* Reduced margin */
+                font-size: 2.2rem; /* Adjusted for print readability */
+                margin-bottom: 12mm;
             }
             .subtitle {
-                font-size: 0.9rem; /* Significantly smaller for single page */
-                margin-bottom: 10mm; /* Reduced margin */
+                font-size: 1.1rem; /* Adjusted for print readability */
+                margin-bottom: 15mm;
             }
             ul {
-                margin-bottom: 5mm; /* Reduced margin */
+                margin-bottom: 8mm; /* Space after main ul */
             }
             li {
-                margin-bottom: 8mm; /* Reduced margin */
-                page-break-inside: avoid; /* Prevent breaking */
+                margin-bottom: 12mm;
+                page-break-inside: avoid; /* Crucial: prevent content within a li from breaking */
             }
-            /* Remove forced page break after 'Packaging & Presentation' */
-            li:nth-of-type(2) {
-                page-break-after: auto;
+            /* Force a page break after the 'Packaging & Presentation' section */
+            li:nth-of-type(2) { /* This targets the second <li>, which is 'Packaging & Presentation' */
+                page-break-after: always;
             }
             li strong {
-                font-size: 1.05em; /* Reduced font size */
-                margin-bottom: 4mm; /* Reduced margin */
+                font-size: 1.2em;
+                margin-bottom: 6mm;
                 border-bottom: none;
             }
             ul li ul {
-                padding: 5mm 5mm 5mm 10mm; /* Reduced padding */
-                margin-top: 5mm; /* Reduced margin */
+                padding: 8mm 8mm 8mm 15mm;
+                margin-top: 8mm;
                 background-color: #FDFBF8;
                 border: 1px solid #F8E6DD;
             }
             ul li ul li {
-                font-size: 0.85em; /* Reduced font size */
-                margin-bottom: 2mm; /* Reduced margin */
+                font-size: 0.95em;
+                margin-bottom: 4mm;
             }
             ul li ul li:last-child {
                 margin-bottom: 0;
             }
             .section-divider {
-                margin: 10mm 0; /* Reduced margin */
+                margin: 20mm 0;
                 page-break-before: auto;
                 page-break-after: auto;
             }
             .packaging-option {
-                padding: 8mm; /* Reduced padding */
-                margin-bottom: 8mm; /* Reduced margin */
-                page-break-inside: avoid;
+                padding: 12mm;
+                margin-bottom: 12mm;
+                page-break-inside: avoid; /* Ensure packaging options stay together */
             }
             .packaging-option strong {
-                font-size: 0.95em; /* Reduced font size */
-                margin-bottom: 4mm; /* Reduced margin */
+                font-size: 1.1em;
+                margin-bottom: 6mm;
             }
             .packaging-option p {
-                margin-bottom: 4mm; /* Reduced margin */
+                margin-bottom: 6mm;
             }
             .packaging-images {
-                gap: 4mm; /* Reduced gap */
-                margin-top: 4mm; /* Reduced margin */
+                gap: 6mm;
+                margin-top: 6mm;
             }
             .packaging-images img {
-                flex-basis: 70px; /* Significantly reduced base for print */
-                max-width: 100px; /* Significantly reduced max for print */
+                flex-basis: 100px;
+                max-width: 150px;
                 box-shadow: none;
             }
             .print-button {
